--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ body {
 
 
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 5px;
   height: 5px;
 }
 
@@ -62,3 +62,19 @@ body {
   background: #929292;
 }
 
+
+input[type=radio] {
+  border: 0.5px solid #696969;
+  padding: 0.35em;
+  -webkit-appearance: none;
+}
+
+input[type=radio]:checked {
+  /* background: url(data:image/gif;base64,R0lGODlhAQABAPAAAP///////yH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==) no-repeat center center; */
+  background: #696969;
+  background-size: 9px 9px;
+}
+
+input[type=radio]:focus {
+  outline-color: transparent;
+}
