dynamic profile data, address data, edit options and wishlist

--- a/src/index.css
+++ b/src/index.css
@@ -78,3 +78,22 @@ input[type=radio]:checked {
 input[type=radio]:focus {
   outline-color: transparent;
 }
+
+input[type="date"]{
+  border: none;
+  outline: none;
+  border-radius: 5px;
+}
+::-webkit-calendar-picker-indicator{
+  background-color: #ffffff;
+  padding: 5px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+input[type=date]:required:invalid::-webkit-datetime-edit {
+  color: transparent;
+}
+input[type=date]:focus::-webkit-datetime-edit {
+  color: black !important;
+}
