static admin product list page, produst add page and order list page

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 /* @import url("https://fonts.cdnfonts.com/css/gill-sans"); */
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -10,6 +11,10 @@
 @font-face {
   font-family: "GoldenSignature";
   src: url("../public/fonts/GoldenSignature.ttf");
+}
+
+.roboto {
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
