--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,7 @@ input[type=radio] {
   -webkit-appearance: none;
 }
 
+
 input[type=radio]:checked {
   /* background: url(data:image/gif;base64,R0lGODlhAQABAPAAAP///////yH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==) no-repeat center center; */
   background: #696969;
@@ -101,4 +102,90 @@ input[type=date]:required:invalid::-webkit-datetime-edit {
 }
 input[type=date]:focus::-webkit-datetime-edit {
   color: black !important;
+}
+
+.paginationButtons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 12px;
+  color: #494949;
+  font-size: 14px;
+  /* max-width: 500px; */
+}
+
+.previousBtn {
+  color: #494949;
+}
+
+.nextBtn {
+  color: #494949;
+}
+
+.paginationActive {
+  background-color: #3EDCFF;
+  color: black;
+  padding: 0px 7px;
+  border-radius: 50%;
+}
+
+/* .custom-file-input::-webkit-file-upload-button {
+  visibility: hidden;
+}
+.custom-file-input::before {
+  content: 'Select some files';
+  display: inline-block;
+  background-color: #DDDDDD;
+  border: 1px solid #999;
+  border-radius: 8px;
+  padding: 5px 8px;
+  outline: none;
+  white-space: nowrap;
+  -webkit-user-select: none;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 10pt;
+}
+.custom-file-input:hover::before {
+  border-color: black;
+}
+.custom-file-input:active::before {
+  background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+} */
+
+.inputfile {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+
+.inputfile + label {
+  padding: 6px 25px;
+  border-radius: 8px;
+  font-size: 15px;
+  font-weight: 400;
+  color: #696363;
+  background-color: #DDDDDD;
+  display: inline-block;
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+}
+
+.inputfile + label:hover {
+  color: rgb(53, 53, 53);
+  /* background-color: #c8f5fffd; */
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+}
+
+.inputfile + label:active {
+  color: black;
+  transform: scale(0.91);
+  background-color: #1ab9dd;
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+}
+
+.inputfile + label {
+	cursor: pointer; /* "hand" cursor */
 }
